functions and unit test to extract links from WAT files and save in hive table